Fix: Style modal and visibility

--- a/faccialibro/src/components/Modal/index.css
+++ b/faccialibro/src/components/Modal/index.css
@@ -77,6 +77,7 @@
   background-color: #212129;
   padding: 20px;
   width: 80%;
+  height: 70%;
   display: flex;
   flex-direction: column;
   justify-content: center;
